--- a/pos_bahrain/public/js/pos_bahrain.html
+++ b/pos_bahrain/public/js/pos_bahrain.html
@@ -94,7 +94,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-sm-5 list-customers">
+	<div class="col-sm-4 list-customers">
 		<div class="col-sm-12"><h6 class="form-section-heading uppercase">{{ __("Customers in Queue") }}</h6></div>
 		<div class="pos-list-row pos-bill-header">
 			<div class="cell subject"><input class="list-select-all" type="checkbox">{{ __("Customer") }}</div>
@@ -111,7 +111,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-sm-7 pos-items-section">
+	<div class="col-sm-6 pos-items-section">
 		<div class="col-sm-12"><h6 class="form-section-heading uppercase">{{ __("Stock Items") }}</h6></div>
 		<div class="row pos-item-area">
 
@@ -131,7 +131,10 @@
 			<div class="app-listing item-list image-view-container">
 
 			</div>
+			
 		</div>
 	</div>
+<div class="col-sm-2 list-item-groups">
+	<span class="cell bold">{{ __("All Item Groups") }}</span>
 </div>
 
